# RustWaf

./: ARCHITECTURE-en.md  BOUNDARY.md  Cargo.toml  LICENSE  README.md  add-spdx.sh  config-gotestwaf-detection-max.toml  config.toml  run_fuzz.sh
crates/waf-core/: Cargo.toml  README.md
crates/waf-core/src/: lib.rs  state.rs  testkit.rs
crates/waf-core/src/network/: client_ip.rs  mod.rs
crates/waf-corpus/: Cargo.toml
crates/waf-corpus/benches/: inspection.rs
crates/waf-corpus/examples/: coverage.rs  fastpath_bench.rs  latency_distribution.rs  regression_gate.rs  report.rs  tuning.rs
crates/waf-corpus/src/: lib.rs  metrics.rs  runner.rs
crates/waf-corpus/src/cases/: grpc.rs  header_injection.rs  ldap.rs  lfi_rfi.rs  mail.rs  mod.rs  nosql.rs  path_traversal.rs  rce.rs  request_smuggling.rs  scanner.rs  sqli.rs  ssi.rs  ssrf.rs  ssti.rs  xss.rs  xxe.rs
crates/waf-corpus/tests/: smoke.rs  validation.rs
crates/waf-detection/: Cargo.toml  README.md
crates/waf-detection/src/: grpc.rs  header_injection.rs  ldap.rs  lfi_rfi.rs  lib.rs  mail.rs  nosql.rs  path_traversal.rs  rate_limit.rs  rce.rs  request_smuggling.rs  scanner.rs  sqli.rs  ssi.rs  ssrf.rs  ssti.rs  xss.rs  xxe.rs
crates/waf-detection/tests/: graphql.rs  grpc.rs  header_injection.rs  lfi_rfi.rs  path_traversal.rs  rate_limit.rs  rce.rs  request_smuggling.rs  sqli.rs  ssrf.rs  xss.rs
crates/waf-normalizer/: Cargo.toml  README.md
crates/waf-normalizer/src/: body.rs  grpc.rs  lib.rs  url.rs
crates/waf-normalizer/tests/: cookie_robustness.rs  differential.proptest-regressions  differential.rs  form_robustness.rs  json_robustness.rs  multipart_robustness.proptest-regressions  multipart_robustness.rs  normalizer.rs  path_robustness.rs  query_robustness.rs
crates/waf-pipeline/: Cargo.toml  README.md
crates/waf-pipeline/src/: lib.rs  noop_logger.rs
crates/waf-pipeline/tests/: pipeline.rs
crates/waf-proxy/: Cargo.toml  NOTICE  README.md
crates/waf-proxy/examples/: load_overhead.rs
crates/waf-proxy/src/: config.rs  lib.rs  main.rs  metrics.rs  tls.rs
crates/waf-proxy/tests/: grpc.rs  integration.rs  metrics.rs  tls.rs
crates/waf-wasm/: Cargo.toml  README.md
examples/: README.md  api-json.toml  balanced.toml  behind-cdn.toml  detection-only.toml  strict.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: cookies.rs  flatten_json.rs  form_body.rs  grpc_extract.rs  multipart.rs  normalize_path.rs  percent_decode.rs  query.rs
fuzz/seeds/multipart/: no-closing-boundary  two-parts
fuzz/seeds/percent_decode/: double-encoded  overlong-utf8  truncated-and-plus
