[workspace]
members = [
    "crates/waf-core",
    "crates/waf-normalizer",
    "crates/waf-pipeline",
    "crates/waf-detection",
    "crates/waf-proxy",
    "crates/waf-corpus",
    "crates/waf-wasm",
]
# `fuzz/` is a cargo-fuzz crate (nightly + libFuzzer, Linux/CI only). Excluded so it
# never breaks `cargo build/test --workspace` on a stable/Windows toolchain.
exclude = ["fuzz"]
resolver = "2"

# Shared package metadata, inherited per-crate via `<field>.workspace = true`.
# `description`, `keywords`, `categories` stay per-crate (they differ).
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["0x00spor3"]
repository = "https://github.com/0x00spor3/Light-WAF"
homepage = "https://github.com/0x00spor3/Light-WAF"

# Internal crates declared once with their published version, so the `path` deps
# carry a version requirement (mandatory for `cargo publish`).
[workspace.dependencies]
waf-core = { path = "crates/waf-core", version = "0.1.0" }
waf-normalizer = { path = "crates/waf-normalizer", version = "0.1.0" }
waf-pipeline = { path = "crates/waf-pipeline", version = "0.1.0" }
waf-detection = { path = "crates/waf-detection", version = "0.1.0" }
waf-wasm = { path = "crates/waf-wasm", version = "0.1.0" }
