# cargo-fuzz crate (Fase 8). NOT a workspace member — see root Cargo.toml `exclude`.
# Build/run on Linux (or macOS) with a nightly toolchain:
#   cargo install cargo-fuzz
#   cargo +nightly fuzz run percent_decode
# libFuzzer is unsupported on Windows, so this crate is CI/Linux-only; the
# always-on differential invariants live in waf-normalizer/tests/differential.rs.
[package]
name = "waf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
waf-core = { path = "../crates/waf-core" }
waf-normalizer = { path = "../crates/waf-normalizer" }

[[bin]]
name = "percent_decode"
path = "fuzz_targets/percent_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "multipart"
path = "fuzz_targets/multipart.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_path"
path = "fuzz_targets/normalize_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query"
path = "fuzz_targets/query.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flatten_json"
path = "fuzz_targets/flatten_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cookies"
path = "fuzz_targets/cookies.rs"
test = false
doc = false
bench = false

[[bin]]
name = "form_body"
path = "fuzz_targets/form_body.rs"
test = false
doc = false
bench = false

[[bin]]
name = "graphql_lex"
path = "fuzz_targets/graphql_lex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "grpc_extract"
path = "fuzz_targets/grpc_extract.rs"
test = false
doc = false
bench = false
