[package]
name = "waf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
bytes = "1"

[features]
# Test-only builders for `RequestContext` (see `src/testkit.rs`). Additive and
# never enabled by the proxy — zero-cost in production, confined to test/tooling
# crates (e.g. waf-corpus) that opt in explicitly.
testkit = []
