[package]
name = "waf-core"
description = "Core types for Light WAF: Config, Decision, RequestContext, the WafModule contract, and the StateStore extension seam."
readme = "README.md"
keywords = ["waf", "security", "firewall", "http"]
categories = ["web-programming", "network-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
bytes = "1"

[features]
# Test-only builders for `RequestContext` (see `src/testkit.rs`). Additive and
# never enabled by the proxy — zero-cost in production, confined to test/tooling
# crates (e.g. waf-corpus) that opt in explicitly.
testkit = []
