[package]
name = "waf-corpus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# Internal validation/oracle tooling — never published to crates.io.
publish = false

# Validation corpus (Fase 7 / Pilastro 1): a versioned, reproducible set of
# malicious + benign cases run against the real pipeline. Library so it is reusable
# by Pilastro 2 (threshold tuning) and Pilastro 3 (fast-path equivalence oracle).
[dependencies]
waf-core = { workspace = true, features = ["testkit"] }
waf-detection = { workspace = true }
waf-normalizer = { workspace = true }
waf-pipeline = { workspace = true }

# Fase 9: microbench of the isolated inspection path (enqueue→verdetto). criterion
# without default features → no gnuplot/plotters/HTML report (lighter, faster build),
# consistent with the project's light footprint. On-demand: `cargo bench -p waf-corpus`.
[dev-dependencies]
criterion = { version = "0.5", default-features = false }
# Read criterion's change/estimates.json for the DEC 4 relative-regression gate
# (examples/regression_gate.rs). Already in the tree via criterion → zero marginal cost.
serde_json = "1"

[[bench]]
name = "inspection"
harness = false
