[package]
name = "waf-detection"
description = "Detection modules (SQLi, XSS, RCE, traversal, SSRF, XXE, and more) and the scope-aware fast-path prefilter for Light WAF."
readme = "README.md"
keywords = ["waf", "security", "owasp", "detection"]
categories = ["web-programming", "network-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
waf-core = { workspace = true }
waf-normalizer = { workspace = true }
regex = "1"
tracing = "0.1"

[dev-dependencies]
waf-pipeline = { workspace = true }
bytes = "1"
