[package]
license = "Apache-2.0"
name = "waf-normalizer"
version = "0.1.0"
edition = "2021"

[dependencies]
waf-core = { path = "../waf-core" }
unicode-normalization = "0.1"
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
bytes = "1"
# Fase 8: property-based differential (cross-platform, runs in `cargo test`).
proptest = "1"
# Independent NFKC oracle for the differential's property B (fixed-point check).
unicode-normalization = "0.1"
# Fase 8 #5: build serde_json::Value directly to fuzz the flatten recursion.
serde_json = "1"
