[package]
name = "waf-normalizer"
description = "Request normalization and canonicalization for Light WAF: double-encoding-aware percent-decode, NFKC, body/query/cookie parsing, defensive limits."
readme = "README.md"
keywords = ["waf", "security", "normalization", "http"]
categories = ["web-programming", "parser-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
waf-core = { workspace = true }
unicode-normalization = "0.1"
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
bytes = "1"
# Fase 8: property-based differential (cross-platform, runs in `cargo test`).
proptest = "1"
# Independent NFKC oracle for the differential's property B (fixed-point check).
unicode-normalization = "0.1"
# Fase 8 #5: build serde_json::Value directly to fuzz the flatten recursion.
serde_json = "1"
