[package]
name = "waf-pipeline"
description = "Phased detection orchestrator and CRS-style cumulative anomaly scoring for Light WAF."
readme = "README.md"
keywords = ["waf", "security", "firewall", "http"]
categories = ["web-programming", "network-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
waf-core = { workspace = true }
tracing = "0.1"

[dev-dependencies]
bytes = "1"
